--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node dist/index.js",
-		"dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules --no-notify src/index.ts",
-		"build": "tsc",
+    "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules --no-notify src/index.ts",
+    "build": "tsc",
     "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
     "test:verbose": "jest --passWithNoTests --runInBand",
     "test:unit": "npm test -- --watch -c jest-unit-config.js",
@@ -27,11 +27,12 @@
     "jest": "^29.2.2",
     "supertest": "^6.3.1",
     "ts-jest": "^29.0.3",
-    "typescript": "^4.8.4",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.8.4"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mathjs": "^11.3.3"
   }
 }
