--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node dist/index.js",
     "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules --no-notify src/index.ts",
+    "dev:db": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules --no-notify src/infra/db/mariadb/helpers/mariadbHelper.ts",
     "build": "tsc",
     "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
     "test:verbose": "jest --passWithNoTests --runInBand",
@@ -25,6 +26,7 @@
     "@types/node": "^18.11.7",
     "@types/supertest": "^2.0.12",
     "jest": "^29.2.2",
+    "prisma": "^4.6.1",
     "supertest": "^6.3.1",
     "ts-jest": "^29.0.3",
     "ts-node-dev": "^2.0.0",
@@ -33,6 +35,7 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
+    "mariadb": "^3.0.2",
     "mathjs": "^11.3.3"
   }
 }
