--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
 	"compilerOptions": {
 		"outDir": "./dist",
+		"sourceMap": true,
+		"strict": true,
 		"module": "CommonJS",
 		"target": "ES2019",
 		"esModuleInterop": true,
