--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "mariadb": "^3.0.2",
-    "mathjs": "^11.3.3"
+    "mathjs": "^11.3.3",
+    "uuidv4": "^6.2.13"
   }
 }
