--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/jest": "^29.2.0",
     "@types/node": "^18.11.7",
     "@types/supertest": "^2.0.12",
+    "@types/uuid": "^8.3.4",
     "jest": "^29.2.2",
     "prisma": "^4.6.1",
     "supertest": "^6.3.1",
@@ -37,6 +38,6 @@
     "express": "^4.18.2",
     "mariadb": "^3.0.2",
     "mathjs": "^11.3.3",
-    "uuidv4": "^6.2.13"
+    "uuid": "^9.0.0"
   }
 }
