--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node dist/index.js",
+    "start": "node dist/src/main/server.js",
     "dev": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules --no-notify src/main/server.ts",
     "dev:db": "ts-node-dev --respawn --transpile-only --ignore-watch node_modules --no-notify src/infra/db/mariadb/helpers/mariadbHelper.ts",
     "build": "tsc",
@@ -21,10 +21,12 @@
   "devDependencies": {
     "@shelf/jest-mongodb": "^4.1.3",
     "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/jest": "^29.2.0",
     "@types/node": "^18.11.7",
     "@types/supertest": "^2.0.12",
+    "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.4",
     "jest": "^29.2.2",
     "prisma": "^4.6.1",
@@ -35,10 +37,12 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mariadb": "^3.0.2",
     "mathjs": "^11.3.3",
+    "swagger-ui-express": "^4.6.0",
     "uuid": "^9.0.0"
   }
 }
