--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
 		"target": "ES2019",
 		"esModuleInterop": true,
 		"allowJs": true,
-    "strictNullChecks": true
+    "strictNullChecks": true,
+		"resolveJsonModule": true
 	}
 }
